<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/miStatus"
        android:enabled="false"
        android:title="@string/status_connecting"
        app:showAsAction="always"/>
    <item
        android:id="@+id/miFilter"
        android:icon="@drawable/ic_filter"
        android:title="@string/menu_filter"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/miSave"
        android:title="@string/menu_save"
        android:icon="@drawable/ic_save"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/miShare"
        android:title="@string/menu_share"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/miReconnect"
        android:title="@string/menu_reconnect"
        app:showAsAction="never"/>
    <item
        android:id="@+id/miBltParedDevices"
        android:title="@string/menu_blt_pared_dev"
        app:showAsAction="never"/>
    <item
        android:id="@+id/miClearLogs"
        android:title="@string/menu_clear_logs"
        app:showAsAction="never"/>
    <item
        android:id="@+id/miSettings"
        android:title="@string/menu_settings"
        android:enabled="false"
        app:showAsAction="never"/>
</menu>